# python-cicd-exp

./: Dockerfile  Makefile  README.md  docker-compose.yml  download-jars.sh  logging.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/python_exp/: main.py
tests/: conftest.py
