[metadata]
name = python_exp
version = 0.0.1-alpha1
description = Python Test
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python_exp
author = Ashish M G
classifiers = 
    Programming Language :: Python :: 3
    Indended Audience :: Developers
    Operating System :: OS Independent

[options]
packages = python_exp
include_package_data = true
package_dir = 
    =src
install_requires = 
    pyspark~=3.2
    pandas~=1.4
    pyarrow>=1.0.0
    isodate

[options.extras_require]
dev =
    pytest~=7.1
    pytest-cov~=3.0
    tox~=3.25
    pre-commit~=2.20
    black
    mypy>0.910
    isort
    flake8~=4.0
    flake8-docstrings~=1.6
    types-PyYAML

[options.package_data]
python_exp = py.typed

[options.entry_points]
console_scripts =
    python_etl = python_exp.main:main


[isort]
line_length = 110
combine_as_imports = true
skip = build,.tox,venv
profile = black

[flake8]
max-line-length = 110
ignore = 
    W503
    W504
    E741
    E501
    W605
exclude = tests
docstring-convention = google 